# mikuPixel

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/firmware/: Dockerfile  devcontainer.json
firmware/: AnimationController.cpp  AnimationController.h  AnimationHelpers.h  AnimationRunner.cpp  AnimationRunner.h  CMakeLists.txt  ColourUtils.cpp  ColourUtils.h  EditableImage.h  IAnimation.h  LightController.cpp  LightController.h  Miku.cpp  Miku.h  MikuLight.cpp  MikuLight.h  NeoPixel.h  NeoPixelBuffer.cpp  NeoPixelBuffer.h  PatternEditor.cpp  PatternEditor.h  PatternList.cpp  PatternList.h  PixelMapperAnimation.cpp  blockStorage.cpp  blockStorage.h  bufferOutput.h  configService.cpp  configService.h  debug.h  deviceConfig.cpp  deviceConfig.h  fsdata.c  iwifiConnection.h  mark_neopixel.cpp  mikuPixel.cpp  mikuPixel.h  mqttClient.cpp  mqttClient.h  scheduler.cpp  (+12 more)
firmware/animations/: MarqueeAnimation.cpp  MarqueeAnimation.h  MikuPartCycleAnimation.h  MikuSweepAnimation.cpp  MikuSweepAnimation.h  PatternSequenceAnimation.cpp  PatternSequenceAnimation.h  PingAnimation.h  PixelMapperAnimation.h  PulsingMikuAnimation.cpp  PulsingMikuAnimation.h  RandomDropsAnimation.h  SolidColourAnimation.h  SolidMikuAnimation.h  TrainAnimation.cpp  TrainAnimation.h  WelcomeAnimation.cpp  WelcomeAnimation.h
firmware/dhcpserver/: dhcpserver.c
model/: MikuNeonBody.stl  MikuNeonHair1.stl  MikuNeonHair2.stl  MikuNeonHair3.stl  MikuNeonHair4.stl  MikuNeonHead.stl
utils/: map_leds_from_video.py
web-interface/: package-lock.json  package.json
web-interface/.devcontainer/: devcontainer.json
web-interface/public/: index.html
web-interface/public/api/animations/: list.json  list.json.template
web-interface/public/api/patterns/: get.json  get.json.template  list.json  list.json.template
web-interface/src/: AddPattern.tsx  BasicLightControls.tsx  EditPattern.tsx  HomePage.tsx  LoadingOverlay.tsx  MqttSetup.tsx  Navbar.tsx  Pattern.tsx  PatternEditor.tsx  PatternLinks.tsx  PatternLinks.tsx.new  Patterns.tsx  SetupPage.tsx  WifiSetup.tsx  api.ts  index.tsx
web-interface/src/hooks/: useAppStatus.ts
